assets/css/index.css
/*=============================================
=            MAIN            =
=============================================*/

main {
    height: 100%;
    width: 100%;
}

#main-container {
    flex-direction: column;
    height: 92%;
    width: 85%;
}

#main-navbar {
    height: 10%;
    width: 100%;
    justify-content: flex-start;
    align-items: flex-end;
}

.tab {
    height: 60%;
    width: 20%;
    color: white;
    font-family: helvetica;
    border: none;
    background-color: rgb(70, 70, 70);
    font-size: calc(1vh + 1vw);
    outline: 1px solid gray;
}



#about-tab {
    background-color: rgb(36, 36, 36);
    outline: none;
}

#main-lightbar {
    height: 0.7%;
    width: 100%;
    background-image: linear-gradient(rgb(0, 100, 180) , rgba(255, 255, 255, 0.75), rgb(0, 100, 180));
    box-shadow: 0 0 10px 5px rgba(0, 100, 180, 0.7);
    z-index: 21;
}

#main-content-container {
    background-color: rgb(36, 36, 36);
    height: 100%;
    width: 100%;
}

.content {
    position: absolute;
    height: 75.5%;
    width: 85%;
}

#about {
   flex-direction: column;
}

#project {
    visibility: hidden;
    
}

#resume {
    background-color: white;
    visibility: hidden;
}

#resume > object {
    height: 100%;
    width: 100%;
}

#about-text-container {
    height: 100%;
    width: 90%;
    color: white;
    flex-direction: column;
    font-size: calc(1.5vh + 1vw);
}

#about-text-container > p {
    margin-top: 5%;
}

#about-text-container > img {
    height: 30%;
    margin-top: 2%;
    margin-right: 10%;
}

#email-link {
    height: 10%;
    width: 100%;
    font-size: calc(1vh + 1vw);
    align-items: center;
    justify-content: center;
    flex-direction: column;
    text-decoration: none;
    color: white;
    padding: 0;
}

#email-link > img {
    height: 60%;
}

#project-container {
    height: 95%;
    width: 90%;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-between;
    align-content: flex-start;
}

.project-button {
    height: 75px;
    width: 75px;
    margin: 2%;
    border-radius: .15rem;
    border: none;
    box-shadow: inset 0 0 5px 5px rgba(144, 149, 153, 0.432);
    background-color: white;
}

.project-button:hover {
    box-shadow: inset 0 0 5px 5px rgba(0, 153, 255, 0.486);
}

.project-link {
    text-decoration: none;
    color: black;
    flex-direction: column;
    height: 99%;
    width: 99%;
}

.project-link > img {
    height: 50%;
    width: 50%;
}


/*=============================================
=            non mobile            =
=============================================*/
@media only screen and (min-width: 600px) {

    #main-container {
        width: 60%;
    }
    
    #main-navbar>button {
        height: 75%;
        width: 15%;
    }

    #project-container {
       width: 68%;
    }

    .project-button {
        height: 150px;
        width: 150px;
    }

    .project-link > img {
        padding: 10%;
    }

    #resume {
        width: 60%;
    }

}

